ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - your.domain.com
      secretName: your-tls-secret
  rules:
    - host: fluffyhanski.com
      http:
        paths:
          - path: /ad
            pathType: Prefix
            backend:
              service:
                name: opentelemetry-demo-adservice
                port:
                  number: 8080
          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: opentelemetry-demo-cartservice
                port:
                  number: 8080
