ingress/public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: http-01-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ex10-berkay.com
      secretName: ex10-berkay-com
  rules:
  - host: ex10-berkay.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
